peac_dev/force-app/main/default/objects/Integration_Log__c/fields/Callout_Duration__c.field-meta.xml
<CustomField>
    <fullName>Callout_Duration__c</fullName>
    <label>Callout Duration (milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>