peac_dev/force-app/main/default/objects/Integration_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>It holds the Id field of integration(Salesforce Id/ External Id)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>