peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Aspire.listView-meta.xml
<ListView>
    <fullName>Aspire</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Request_Message__c</columns>
    <columns>Response_Message__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Aspire</value>
    </filters>
    <label>Aspire</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>