peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/CaseCenter_API.listView-meta.xml
<ListView>
    <fullName>CaseCenter_API</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>CaseCenter API</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2023 12:00 AM</value>
    </filters>
    <label>CaseCenter API</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>