peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/CaseCenter_Error.listView-meta.xml
<ListView>
    <fullName>CaseCenter_Error</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CaseCenter API,CaseCenter OnBase API</value>
    </filters>
    <label>CaseCenter Error</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>