peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/CaseCenter_Logs.listView-meta.xml
<ListView>
    <fullName>CaseCenter_Logs</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>pk</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/4/2021 12:00 AM</value>
    </filters>
    <label>CaseCenter Logs</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>