peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Doc_Fee.listView-meta.xml
<ListView>
    <fullName>Doc_Fee</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Doc Fee</value>
    </filters>
    <label>Doc Fee</label>
</ListView>