peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/executeStoredProcedureCall.listView-meta.xml
<ListView>
    <fullName>executeStoredProcedureCall</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>executeStoredProcedureCall</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>executeStoredProcedureCall</label>
</ListView>