peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Infolease_API.listView-meta.xml
<ListView>
    <fullName>Infolease_API</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Infolease API</value>
    </filters>
    <label>Infolease API</label>
</ListView>