peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Infolease_Error.listView-meta.xml
<ListView>
    <fullName>Infolease_Error</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Request_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Infolease</value>
    </filters>
    <label>Infolease Error</label>
</ListView>