peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Infolease_specific_ID.listView-meta.xml
<ListView>
    <fullName>Infolease_specific_ID</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Id__c</field>
        <operation>equals</operation>
        <value>0066100000PjvpCAAR</value>
    </filters>
    <label>Infolease specific ID</label>
</ListView>