peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Ocrolus_File_Upload.listView-meta.xml
<ListView>
    <fullName>Ocrolus_File_Upload</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Ocrolus File Upload</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/1/2021 12:00 AM</value>
    </filters>
    <label>Ocrolus File Upload</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>