peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Rapport_API.listView-meta.xml
<ListView>
    <fullName>Rapport_API</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Rapport</value>
    </filters>
    <label>Rapport API</label>
</ListView>