peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/Rapport_Error.listView-meta.xml
<ListView>
    <fullName>Rapport_Error</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Rap</value>
    </filters>
    <label>Rapport Error</label>
</ListView>