peac_dev/force-app/main/default/objects/Integration_Log__c/listViews/SL_DP_Sharing_Recalculation_Batch.listView-meta.xml
<ListView>
    <fullName>SL_DP_Sharing_Recalculation_Batch</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Response_Message__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>DP Sharing Recalculation Batch</value>
    </filters>
    <label>SL DP Sharing Recalculation Batch</label>
</ListView>